yamls/currikidev-auth-api-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert -f docker-compose.k8s.yml -o yamls/
    kompose.version: 1.21.0 ()
  creationTimestamp: null
  labels:
    io.kompose.service: currikidev-auth-api
  name: currikidev-auth-api
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: currikidev-auth-api
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert -f docker-compose.k8s.yml -o yamls/
        kompose.version: 1.21.0 ()
      creationTimestamp: null
      labels:
        io.kompose.network/currikidev-laravel: "true"
        io.kompose.service: currikidev-auth-api
    spec:
      containers:
      - image: currikidev/auth-api:1.0.0
        imagePullPolicy: IfNotPresent
        name: currikidev-auth-api
        ports:
        - containerPort: 8000
        resources: {}
      restartPolicy: Always
      serviceAccountName: ""
      volumes: null
status: {}
