yamls/currikidev-client-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert -f docker-compose.k8s.yml -o yamls/
    kompose.version: 1.21.0 ()
  creationTimestamp: null
  labels:
    io.kompose.service: currikidev-client
  name: currikidev-client
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: currikidev-client
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert -f docker-compose.k8s.yml -o yamls/
        kompose.version: 1.21.0 ()
      creationTimestamp: null
      labels:
        io.kompose.network/currikidev-laravel: "true"
        io.kompose.service: currikidev-client
    spec:
      containers:
      - image: currikidev/client:1.0.0
        imagePullPolicy: IfNotPresent
        name: currikidev-client
        ports:
        - containerPort: 3000
        resources: {}
        stdin: true
      restartPolicy: Always
      serviceAccountName: ""
      volumes: null
status: {}
