yamls/currikidev-lti-provider-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert -f docker-compose.yml -o yamls/
    kompose.version: 1.21.0 ()
  creationTimestamp: null
  labels:
    io.kompose.service: currikidev-lti-provider
  name: currikidev-lti-provider
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: currikidev-lti-provider
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert -f docker-compose.yml -o yamls/
        kompose.version: 1.21.0 ()
      creationTimestamp: null
      labels:
        io.kompose.network/currikidev-laravel: "true"
        io.kompose.service: currikidev-lti-provider
    spec:
      containers:
      - image: currikidev-lti-provider
        imagePullPolicy: ""
        name: currikidev-lti-provider
        ports:
        - containerPort: 9500
        resources: {}
        volumeMounts:
        - mountPath: /var/www/html
          name: currikidev-lti-provider-claim0
        - mountPath: /usr/local/etc/php/php.ini
          name: currikidev-lti-provider-claim1
      restartPolicy: Always
      serviceAccountName: ""
      volumes:
      - name: currikidev-lti-provider-claim0
        persistentVolumeClaim:
          claimName: currikidev-lti-provider-claim0
      - name: currikidev-lti-provider-claim1
        persistentVolumeClaim:
          claimName: currikidev-lti-provider-claim1
status: {}
