yamls/currikidev-mysql-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert -f docker-compose.k8s.yml -o yamls/
    kompose.version: 1.21.0 ()
  creationTimestamp: null
  labels:
    io.kompose.service: currikidev-mysql
  name: currikidev-mysql
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: currikidev-mysql
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert -f docker-compose.k8s.yml -o yamls/
        kompose.version: 1.21.0 ()
      creationTimestamp: null
      labels:
        io.kompose.network/currikidev-laravel: "true"
        io.kompose.service: currikidev-mysql
    spec:
      containers:
      - env:
        - name: MYSQL_DATABASE
        - name: MYSQL_PASSWORD
        - name: MYSQL_ROOT_PASSWORD
        - name: MYSQL_USER
        - name: SERVICE_NAME
          value: mysql
        - name: SERVICE_TAGS
          value: dev
        image: currikidev/mysql:1.0.0
        imagePullPolicy: IfNotPresent
        name: currikidev-mysql
        ports:
        - containerPort: 3306
        resources: {}
        tty: true
      restartPolicy: Always
      serviceAccountName: ""
      volumes: null
status: {}
