yamls/currikidev-phpmyadmin-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert -f docker-compose.k8s.yml -o yamls/
    kompose.version: 1.21.0 ()
  creationTimestamp: null
  labels:
    io.kompose.service: currikidev-phpmyadmin
  name: currikidev-phpmyadmin
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: currikidev-phpmyadmin
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert -f docker-compose.k8s.yml -o yamls/
        kompose.version: 1.21.0 ()
      creationTimestamp: null
      labels:
        io.kompose.network/currikidev-laravel: "true"
        io.kompose.service: currikidev-phpmyadmin
    spec:
      containers:
      - env:
        - name: MYSQL_ROOT_PASSWORD
        - name: PMA_ABSOLUTE_URI
        - name: PMA_HOST
          value: currikidev-mysql
        image: currikidev/phpmyadmin:1.0.0
        imagePullPolicy: IfNotPresent
        name: currikidev-phpmyadmin
        ports:
        - containerPort: 80
        resources: {}
      restartPolicy: Always
      serviceAccountName: ""
      volumes: null
status: {}
