yamls/currikidev-goaccess-nginx-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert -f docker-compose.yml -o yamls/
    kompose.version: 1.21.0 ()
  creationTimestamp: null
  labels:
    io.kompose.service: currikidev-goaccess-nginx
  name: currikidev-goaccess-nginx
spec:
  ports:
  - name: "7891"
    port: 7891
    targetPort: 80
  selector:
    io.kompose.service: currikidev-goaccess-nginx
status:
  loadBalancer: {}
