yamls/currikidev-h5p-api-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert -f docker-compose.yml -o yamls/
    kompose.version: 1.21.0 ()
  creationTimestamp: null
  labels:
    io.kompose.service: currikidev-h5p-api
  name: currikidev-h5p-api
spec:
  ports:
  - name: "7000"
    port: 7000
    targetPort: 7000
  selector:
    io.kompose.service: currikidev-h5p-api
status:
  loadBalancer: {}
