yamls/currikidev-laravel-api-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert -f docker-compose.k8s.yml -o yamls/
    kompose.version: 1.21.0 ()
  creationTimestamp: null
  labels:
    io.kompose.service: currikidev-laravel-api
  name: currikidev-laravel-api
spec:
  type: LoadBalancer
  ports:
  - name: "9000"
    port: 9000
    targetPort: 9000
  selector:
    io.kompose.service: currikidev-laravel-api
status:
  loadBalancer: {}
