yamls/currikidev-lti-provider-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert -f docker-compose.yml -o yamls/
    kompose.version: 1.21.0 ()
  creationTimestamp: null
  labels:
    io.kompose.service: currikidev-lti-provider
  name: currikidev-lti-provider
spec:
  ports:
  - name: "9500"
    port: 9500
    targetPort: 9500
  selector:
    io.kompose.service: currikidev-lti-provider
status:
  loadBalancer: {}
