yamls/currikidev-mongodb-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert -f docker-compose.yml -o yamls/
    kompose.version: 1.21.0 ()
  creationTimestamp: null
  labels:
    io.kompose.service: currikidev-mongodb
  name: currikidev-mongodb
spec:
  ports:
  - name: "28018"
    port: 28018
    targetPort: 27017
  selector:
    io.kompose.service: currikidev-mongodb
status:
  loadBalancer: {}
