yamls/currikidev-mysql-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert -f docker-compose.yml -o yamls/
    kompose.version: 1.21.0 ()
  creationTimestamp: null
  labels:
    io.kompose.service: currikidev-mysql
  name: currikidev-mysql
spec:
  ports:
  - name: "3306"
    port: 3306
    targetPort: 3306
  selector:
    io.kompose.service: currikidev-mysql
status:
  loadBalancer: {}
