yamls/currikidev-phpmyadmin-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert -f docker-compose.k8s.yml -o yamls/
    kompose.version: 1.21.0 ()
  creationTimestamp: null
  labels:
    io.kompose.service: currikidev-phpmyadmin
  name: currikidev-phpmyadmin
spec:
  ports:
  - name: "8088"
    port: 8088
    targetPort: 80
  selector:
    io.kompose.service: currikidev-phpmyadmin
status:
  loadBalancer: {}
